github link added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </div>
 
         <div class="flex justify-center">
-            <a href=""><img class="w-12" src="./src/svg/github.svg" alt="GitHub"></a>
+            <a href="https://github.com/AngelZ5/Beach-Finder/tree/main"><img class="w-12" src="./src/svg/github.svg"
+                    alt="GitHub"></a>
         </div>
     </main>
 
